Start base style + flex display

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Hello-my-name-is-Marie-Laqua</title>
+        <title>Marie-Laqua</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -24,19 +25,19 @@
 
             <section class="flex-container">
 
-                <div class= "flex-item">
+                <div id="div-1" class= "flex-item">
                     <p>
                         Some different interests that I have are reading, researching, organizing, brainstorming ideas, and exercise.
                     </p>
                 </div>
 
-                <div class="flex-item">
+                <div id="div-2" class="flex-item">
                     <p>
                         Although I enjoy creating websites and bringing ideas to life, it is a recent realization that programming is attainable. The joy that goes into these projects is unbelievable. Being able to understand how the puzzle fits together then have another one that is original makes sucha a pursuit remain vibrant.
                     </p>
                 </div>
 
-                <div class="flex-item">
+                <div id="div-3" class="flex-item">
                     <p>
                         No matter what there will be a part of me that can't help but keep learning up on the different materials and extentions. So far vscode has been impressive but, I have a feelining that there will quite a bit that is fun about react too. The yearning keeps me thinking about while something did or did not work. Thank goodness for notes and the luch that I have a great online community with so many people.
                     </p>
