Trying diff ids and class

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1>
+        <header class="flex-container">
+            
+            <h1 class="flex-item">
                 Hello, my name is Marie Laqua.
             </h1>
 
-            <h2>
+            <h2 class="flex-item">
                 This is a sample of my work using flexbox for a simple intoduction page. Within this page there are coding best practices and some fun practice in varying skills within HTML5 and CSS.
             </h2>
         </header>
